# python_guide

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
01_why_linux/: index.html
02_reproducible_environment/: index.html
03_python_versions/: index.html
04_developing_python_applications/: index.html
05_installing_python_applications/: index.html
app_conda/: index.html
docs/: 01_why_linux.md  02_reproducible_environment.md  03_python_versions.md  04_developing_python_applications.md  05_installing_python_applications.md  app_conda.md  index.md
search/: search_index.json
